--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>IamDreamer</title>
-    <link href="css/media_query.css" rel="stylesheet" type="text/css"/>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/media_query.css" rel="stylesheet" type="text/css"/>
+    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/bootstrap.css" rel="stylesheet" type="text/css"/>
     <!--Need to ask-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/animate.css" rel="stylesheet" type="text/css"/>
+    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/animate.css" rel="stylesheet" type="text/css"/>
     <!--Need to ask-->
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link href="css/owl.carousel.css" rel="stylesheet" type="text/css"/>
-    <link href="css/owl.theme.default.css" rel="stylesheet" type="text/css"/>
+    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/owl.carousel.css" rel="stylesheet" type="text/css"/>
+    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/owl.theme.default.css" rel="stylesheet" type="text/css"/>
     <!-- Bootstrap CSS -->
-    <link href="css/style_1.css" rel="stylesheet" type="text/css"/>
+    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/style_1.css" rel="stylesheet" type="text/css"/>
     <!-- Modernizr JS -->
-    <script src="js/modernizr-3.5.0.min.js"></script>
+    <script src="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/js/modernizr-3.5.0.min.js"></script>
 </head>
 <body>
 <div class="container-fluid fh5co_header_bg">
