--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
 </div>
 <!--To edit-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
+<script src="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/js/owl.carousel.min.js"></script>
 <!--<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>-->
 <!--To edit-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
@@ -618,9 +618,9 @@
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
 <!-- Waypoints -->
-<script src="js/jquery.waypoints.min.js"></script>
+<script src="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/js/jquery.waypoints.min.js"></script>
 <!-- Main -->
-<script src="js/main.js"></script>
+<script src="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/js/main.js"></script>
 
 </body>
 </html>
