--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
-            <a class="navbar-brand" href="iamdreamer.co.in"><img src="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/images/logo.png" alt="img" class="mobile_logo_width"/></a>
+            <a class="navbar-brand" href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/iamdreamer.co.in"><img src="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/images/logo.png" alt="img" class="mobile_logo_width"/></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cyberdocs.html">CyberDocs<span class="sr-only">(current)</span></a>
