--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>IamDreamer</title>
-    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/media_query.css" rel="stylesheet" type="text/css"/>
-    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="css/media_query.css" rel="stylesheet" type="text/css"/>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
     <!--Need to ask-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/animate.css" rel="stylesheet" type="text/css"/>
+    <link href="css/animate.css" rel="stylesheet" type="text/css"/>
     <!--Need to ask-->
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/owl.carousel.css" rel="stylesheet" type="text/css"/>
-    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/owl.theme.default.css" rel="stylesheet" type="text/css"/>
+    <link href="css/owl.carousel.css" rel="stylesheet" type="text/css"/>
+    <link href="css/owl.theme.default.css" rel="stylesheet" type="text/css"/>
     <!-- Bootstrap CSS -->
-    <link href="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/css/style_1.css" rel="stylesheet" type="text/css"/>
+    <link href="css/style_1.css" rel="stylesheet" type="text/css"/>
     <!-- Modernizr JS -->
-    <script src="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/js/modernizr-3.5.0.min.js"></script>
+    <script src="js/modernizr-3.5.0.min.js"></script>
 </head>
 <body>
 <div class="container-fluid fh5co_header_bg">
@@ -607,7 +607,7 @@
 </div>
 <!--To edit-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/js/owl.carousel.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
 <!--<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>-->
 <!--To edit-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
@@ -618,9 +618,9 @@
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
 <!-- Waypoints -->
-<script src="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/js/jquery.waypoints.min.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
 <!-- Main -->
-<script src="https://github.com/iamdreamerofficial/iamdreamerofficial.github.io/tree/main/js/main.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
