--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                                            class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="single.html" class="text-white">Is OpenAI taking over our jobs?</a>
+                        <a href="open-ai-chatgpt.html" class="text-white">Is OpenAI taking over our jobs?</a>
                         <div class="fh5co_latest_trading_date_and_name_color">Trending - Feb 26,2023</div>
                     </div>
                 </div>
