--- a/open-ai-chatgpt.html
+++ b/open-ai-chatgpt.html
@@ -250,8 +250,7 @@ Overall, OpenAI is an important and influential organization in the field of AI 
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="footer_main_title py-3"> About</div>
                 <div class="footer_sub_about pb-3">
-
-                    Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments. Thank you for choosing our company as your technology partner. We look forward to working with you and helping you achieve your goals.
+                    Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments.
                 </div>
                 <div class="footer_mediya_icon">
                     <div class="text-center d-inline-block"><a href="https://www.linkedin.com/in/iamdreamer/" target="_blank" class="fh5co_display_table_footer">
