--- a/open-ai-chatgpt.html
+++ b/open-ai-chatgpt.html
@@ -43,7 +43,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-3 fh5co_padding_menu">
-              <a href="https://iamdreamer.co.in">
+              <a href="index.html">
               <img  src="images/logo.png" alt="iamdreamer.co.in" class="fh5co_logo_width">
               </a>
             </div>
@@ -79,7 +79,7 @@
             <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
-            <a class="navbar-brand" href="https://iamdreamer.co.in"><img src="images/logo.png" alt="img" class="mobile_logo_width"/></a>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="img" class="mobile_logo_width"/></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
