--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 <div class="container-fluid fh5co_header_bg">
     <div class="container">
         <div class="row">
-            <div class="col-12 fh5co_mediya_center"><a href="iamdreamer.co.in" class="color_fff fh5co_mediya_setting"><i
+            <div class="col-12 fh5co_mediya_center"><a href="index.html" class="color_fff fh5co_mediya_setting"><i
                     class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;Friday, 5 Feb 2023</a>
                 <div class="d-inline-block fh5co_trading_posotion_relative"><a href="iamdreamer/trending" class="treding_btn">Trending</a>
                     <div class="fh5co_treding_position_absolute"></div>
                 </div>
-                <a href="iamdreamer.co.in" class="color_fff fh5co_mediya_setting">Tesla cuts US model S and Model X price</a>
+                <a href="index.html" class="color_fff fh5co_mediya_setting">Tesla cuts US model S and Model X price</a>
             </div>
         </div>
     </div>
@@ -47,7 +47,7 @@
         <div class="row">
             <!--check and edit the link-->
             <div class="col-12 col-md-3 fh5co_padding_menu">
-              <a href="iamdreamer.co.in">
+              <a href="index.html">
               <img  src="images/logo.png" alt="iamdreamer.co.in" class="fh5co_logo_width">
               </a>
             </div>
