--- a/index.html
+++ b/index.html
@@ -9,23 +9,18 @@
 -->
 <html lang="en" class="no-js">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>IamDreamer</title>
     <link href="css/media_query.css" rel="stylesheet" type="text/css"/>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
-    <!--Need to ask-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="css/animate.css" rel="stylesheet" type="text/css"/>
-    <!--Need to ask-->
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet" type="text/css"/>
     <link href="css/owl.theme.default.css" rel="stylesheet" type="text/css"/>
-    <!-- Bootstrap CSS -->
     <link href="css/style_1.css" rel="stylesheet" type="text/css"/>
-    <!-- Modernizr JS -->
     <script src="js/modernizr-3.5.0.min.js"></script>
 </head>
 <body>
@@ -37,7 +32,7 @@
                 <div class="d-inline-block fh5co_trading_posotion_relative"><a href="iamdreamer/trending" class="treding_btn">Trending</a>
                     <div class="fh5co_treding_position_absolute"></div>
                 </div>
-                <a href="index.html" class="color_fff fh5co_mediya_setting">Tesla cuts US model S and Model X price</a>
+                <a href="open-ai-chatgpt.html" class="color_fff fh5co_mediya_setting">ChatGPT</a>
             </div>
         </div>
     </div>
@@ -89,7 +84,7 @@
             <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
-            <a class="navbar-brand" href="iamdreamer.co.in"><img src="images/logo.png" alt="img" class="mobile_logo_width"/></a>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="img" class="mobile_logo_width"/></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
