--- a/open-ai-chatgpt.html
+++ b/open-ai-chatgpt.html
@@ -151,33 +151,33 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                     <a href="#" class="fh5co_tagg">Social</a>
                     <a href="#" class="fh5co_tagg">Three</a>
                 </div>
-                <div>
+<div>
                     <div class="fh5co_heading fh5co_heading_border_bottom pt-3 py-2 mb-4">Most Popular</div>
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/download (1).jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+                        <div class="most_fh5co_treding_font"> BugBounty</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/allef-vinicius-108153.jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/blog/blockchain.jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Enim ad minim veniam nostrud xercitation ullamco.</div>
+                        <div class="most_fh5co_treding_font">Blockchain</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
                 <div class="row pb-3">
                     <div class="col-5 align-self-center">
-                        <img src="images/download (2).jpg" alt="img" class="fh5co_most_trading"/>
+                        <img src="images/blog/iphone-security.jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+                        <div class="most_fh5co_treding_font">Iphone Security</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                     <div class="col-5 align-self-center"><img src="images/seth-doyle-133175.jpg" alt="img"
                                                               class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+                        <div class="most_fh5co_treding_font">Magna aliqua ut enim ad minim veniam quis nostrud.</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                     <div class="fh5co_news_img"><img src="images/39-324x235.jpg" alt=""/></div>
                     <div>
                         <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                     <div class="fh5co_news_img"><img src="images/joe-gardner-75333.jpg" alt=""/></div>
                     <div>
                         <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
             </div>
@@ -222,7 +222,7 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                     <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
                     <div>
                         <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
             </div>
@@ -231,7 +231,7 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                     <div class="fh5co_news_img"><img src="images/seth-doyle-133175.jpg" alt=""/></div>
                     <div>
                         <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i> Oct 16,2017</div>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
             </div>
@@ -244,7 +244,7 @@ Overall, OpenAI is an important and influential organization in the field of AI 
             <div class="col-12 spdp_right py-5"><img src="images/logo-iamdreamer.png" alt="img" class="footer_logo"/></div>
             <div class="clearfix"></div>
             <div class="col-12 col-md-4 col-lg-3">
-                <div class="footer_main_title py-3"> About</div>
+                <div class="footer_main_title py-3">About</div>
                 <div class="footer_sub_about pb-3">
                     Our mission is to simplify complex problems and enhance efficiency through the development of intuitive software and intelligent algorithms. Our areas of expertise include software development, artificial intelligence, machine learning, cloud computing, and cybersecurity. At our company, we believe that collaboration is key to success. We are dedicated to staying ahead of the curve when it comes to technology trends and developments.
                 </div>
@@ -264,7 +264,7 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                 </div>
             </div>
             <div class="col-12 col-md-3 col-lg-2">
-                <div class="footer_main_title py-3"> Who We Are</div>
+                <div class="footer_main_title py-3">Who We Are</div>
                 <ul class="footer_menu">
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Business</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; About Us</a></li>
@@ -280,15 +280,15 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                 <div class="footer_main_title py-3">New Updates</div>
                 <div class="footer_makes_sub_font">Jan 31, 2023</div>
                 <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
-                <div class="footer_makes_sub_font"> Feb 23, 2023</div>
+                <div class="footer_makes_sub_font">Feb 23, 2023</div>
                 <a href="#" class="footer_post pb-4">New iOS bug is not only a warn by security reasearchers</a>
-                <div class="footer_makes_sub_font"> Jan 28, 2023</div>
+                <div class="footer_makes_sub_font">Jan 28, 2023</div>
                 <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
-                <div class="footer_makes_sub_font"> Dec 31, 2022</div>
+                <div class="footer_makes_sub_font">Dec 31, 2022</div>
                 <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
-                <div class="footer_main_title py-3"> Most Viewed Posts</div>
+                <div class="footer_main_title py-3">Most Viewed Posts</div>
                 <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img"/></a>
                 <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
                 <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
@@ -296,6 +296,8 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                 <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
                 <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
                 <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
                 <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
                 <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
             </div>
