--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                         <img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+                        <div class="most_fh5co_treding_font">BugBounty</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
@@ -475,7 +475,7 @@
                         <img src="images/blog/blockchain.jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Enim ad minim veniam nostrud xercitation ullamco.</div>
+                        <div class="most_fh5co_treding_font">Blockchain</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
@@ -484,7 +484,7 @@
                         <img src="images/blog/iphone-security.jpg" alt="img" class="fh5co_most_trading"/>
                     </div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+                        <div class="most_fh5co_treding_font">Iphone Security</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
@@ -492,7 +492,7 @@
                     <div class="col-5 align-self-center"><img src="images/news/Ransomware.png" alt="img"
                                                               class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font"> Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+                        <div class="most_fh5co_treding_font">Ransomware</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
