--- a/open-ai-chatgpt.html
+++ b/open-ai-chatgpt.html
@@ -185,7 +185,7 @@ Overall, OpenAI is an important and influential organization in the field of AI 
                     <div class="col-5 align-self-center"><img src="images/seth-doyle-133175.jpg" alt="img"
                                                               class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
-                        <div class="most_fh5co_treding_font">Magna aliqua ut enim ad minim veniam quis nostrud.</div>
+                        <div class="most_fh5co_treding_font">Ransomware</div>
                         <div class="most_fh5co_treding_font_123"> April 18, 2016</div>
                     </div>
                 </div>
