--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<!--Need to update link-->
-<!--
-	IamDreamer
+<!--www.iamdreamer.co.in
     Instagram: https://www.instagram.com/i_am_dreamer_official/
 	Twitter: https://twitter.com/IamDreamer313
 	Facebook: https://www.facebook.com/IamDreamerOfficial/
-	URL: https://iamdreamer.co.in
--->
+	URL: https://iamdreamer.co.in -->
 <html lang="en" class="no-js">
 <head>
     <meta charset="utf-8">
@@ -15,7 +12,7 @@
     <link href="css/media_query.css" rel="stylesheet" type="text/css"/>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="css/animate.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet" type="text/css"/>
@@ -40,16 +37,12 @@
 <div class="container-fluid">
     <div class="container">
         <div class="row">
-            <!--check and edit the link-->
             <div class="col-12 col-md-3 fh5co_padding_menu">
               <a href="index.html">
               <img  src="images/logo.png" alt="iamdreamer.co.in" class="fh5co_logo_width">
               </a>
             </div>
             <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
-                <!--<div class="text-center d-inline-block">
-                    <a class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div></a>
-                </div>-->
                 <div class="text-center d-inline-block">
                     <a href="https://www.linkedin.com/in/iamdreamer/" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div></a>
                 </div>
@@ -91,13 +84,13 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cyberdocs.html">CyberDocs<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="cyberdocs.html">Education<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="unboxoverflow.html">UnboxOverflow<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="unboxoverflow.html">Lifestyle<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="travel4x4trek.html">BootCamp<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="travel4x4trek.html">Free BootCamp<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link" href="shop/index.html">Shop<span class="sr-only">(current)</span></a>
