--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 <div class="container-fluid paddding mb-5">
     <div class="row mx-0">
         <div class="col-md-6 col-12 paddding animate-box" data-animate-effect="fadeIn">
-            <div class="fh5co_suceefh5co_height"><img src="images/unboxoverflow/apple/iphone/iphone-14-pro-bug.jpg" alt="img"/>
+            <div class="fh5co_suceefh5co_height"><img src="images/programmingLanguages/python/rubaitul-azad-ZIPFteu-R8k-unsplash.jpg" alt="img"/>
                 <div class="fh5co_suceefh5co_height_position_absolute"></div>
                 <div class="fh5co_suceefh5co_height_position_absolute_font">
                     <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Feb 23,2023
                     </a></div>
-                    <div class=""><a href="single.html" class="fh5co_good_font">New iOS bug is not only a warn by security reasearchers</a></div>
+                    <div class=""><a href="single.html" class="fh5co_good_font">Learn Python Step by Step</a></div>
                 </div>
             </div>
         </div>
@@ -172,7 +172,7 @@
                                                            class="fh5co_img_special_relative"/></div>
                     <div class="fh5co_latest_trading_img_position_absolute"></div>
                     <div class="fh5co_latest_trading_img_position_absolute_1">
-                        <a href="open-ai-chatgpt.html" class="text-white">Is OpenAI taking over our jobs?</a>
+                        <a href="single.html" class="text-white">Is OpenAI taking over our jobs?</a>
                         <div class="fh5co_latest_trading_date_and_name_color">Trending - Feb 26,2023</div>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
                                 <img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt=""/>
                             </div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide" id="play-video">
-                                <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_1">
+                               <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_2">
                                     <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button">
                                         <span><i class="fa fa-play"></i></span>
                                     </div>
@@ -305,7 +305,7 @@
                             <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide_2">
                                 <img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt=""/></div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide_2" id="play-video_2">
-                                <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_1">
+                                <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_2">
                                     <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button">
                                         <span><i class="fa fa-play"></i></span>
                                     </div>
@@ -327,7 +327,7 @@
                             <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide_3">
                                 <img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt=""/></div>
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide_3" id="play-video_3">
-                                <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_1">
+                                <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_2">
                                     <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button">
                                         <span><i class="fa fa-play"></i></span>
                                     </div>
@@ -553,18 +553,14 @@
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
                 <div class="footer_main_title py-3"> Most Viewed Posts</div>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/BugBounty/plesk-cve-2023-24044.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-fern-wifi-cracker.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/blog/open-ai-chatgpt.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/blog/Ransomware.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/blog/spacex.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/news/tiktok.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/></a>
+                <div class="footer_makes_sub_font">Jan 31, 2023</div>
+                <a href="#" class="footer_post pb-4">How hackers easly hacking WiFi using automated tools!</a>
+                <div class="footer_makes_sub_font"> Feb 23, 2023</div>
+                <a href="#" class="footer_post pb-4">New iOS bug is not only a warn by security reasearchers</a>
+                <div class="footer_makes_sub_font"> Jan 28, 2023</div>
+                <a href="#" class="footer_post pb-4">Is AI taking over our jobs?</a>
+                <div class="footer_makes_sub_font"> Dec 31, 2022</div>
+                <a href="#" class="footer_post pb-4">Ransomware Attacks: What You Need to Know</a>
             </div>
         </div>
     </div>
