--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Jan
                                 28,2023 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2">All new Samsung S23 Ultra<br>Better than iphone-14-pro ?</a></div>
+                            <div class=""><a href="single.html" class="fh5co_good_font_2">How to hack WiFi using Aircrack-ng</a></div>
                         </div>
                     </div>
                 </div>
@@ -132,12 +132,12 @@
                         <div class="fh5co_suceefh5co_height_position_absolute"></div>
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Feb 24,2023 </a></div>
-                            <div class=""><a href="single.html" class="fh5co_good_font_2">How hackers easly hacking WiFi using automated tools!.</a></div>
+                            <div class=""><a href="single.html" class="fh5co_good_font_2">How hack WiFi using Fern WiFi Cracker</a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-vim-editor.png" alt="img"/>
+                    <div class="fh5co_suceefh5co_height_2"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt="img"/>
                         <div class="fh5co_suceefh5co_height_position_absolute"></div>
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Feb
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-6 paddding animate-box" data-animate-effect="fadeIn">
-                    <div class="fh5co_suceefh5co_height_2"><img src="images/unboxoverflow/apple/iphone/iphone-14-pro.jpg" alt="img"/>
+                    <div class="fh5co_suceefh5co_height_2"><img src="images/cyberdocs/protectaccount/how-to-protect-your-passwords-accounts-zip-file-vim-editor.png" alt="img"/>
                         <div class="fh5co_suceefh5co_height_position_absolute"></div>
                         <div class="fh5co_suceefh5co_height_position_absolute_font_2">
                             <div class=""><a href="#" class="color_fff"> <i class="fa fa-clock-o"></i>&nbsp;&nbsp;Jan
