--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <div class="container-fluid pt-3">
     <div class="container animate-box" data-animate-effect="fadeIn">
         <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Trending</div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Trending - Technology</div>
         </div>
         <div class="owl-carousel owl-theme js" id="slider1">
             <div class="item px-2">
@@ -223,14 +223,14 @@
 <div class="container-fluid pb-4 pt-5">
     <div class="container animate-box">
         <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">News</div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Programming Queries</div>
         </div>
         <div class="owl-carousel owl-theme" id="slider2">
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/news/Ransomware.png" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/cpp/C++.png" alt=""/></div>
                     <div>
-                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">The United States Marshals Service hit with Ransomware</span></a>
+                        <a href="Understanding-Pointers-in-C++.html" class="d-block fh5co_small_post_heading"><span class="">Understanding Pointers in C++</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                     </div>
                 </div>
