--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/news/tiktok.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Oops.png" alt=""/></div>
                     <div>
-                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">The TikTok bans</span></a>
+                        <a href="oops-in-programming.html" class="d-block fh5co_small_post_heading"><span class="">Oops in Programming</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                     </div>
                 </div>
