--- a/index.html
+++ b/index.html
@@ -246,18 +246,18 @@
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/news/tesla.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/learn-python.jpg" alt=""/></div>
                     <div>
-                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">Tesla price cuts</span></a>
+                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">Methods in Python</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i>Feb 25 2023</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/blog/gaming-pc.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Machine-learning.png" alt=""/></div>
                     <div>
-                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">Why Gaming PC</span></a>
+                        <a href="single.html" class="d-block fh5co_small_post_heading"><span class="">Machine Learning</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i>Mar 5 2023</div>
                     </div>
                 </div>
