--- a/index.html
+++ b/index.html
@@ -279,15 +279,15 @@
                             <div class="fh5co_news_img">
                                 <iframe width="100%" height="200" src="https://www.youtube.com/embed/0jE_XGOiyAU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
-                            <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide">
+                          <!-- <div class="fh5co_hover_news_img_video_tag_position_absolute fh5co_hide">
                                 <img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-wifite.png" alt=""/>
-                            </div>
+                            </div> -->
                             <div class="fh5co_hover_news_img_video_tag_position_absolute_1 fh5co_hide" id="play-video">
-                               <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_2">
+                            <!--<div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button_2">
                                     <div class="fh5co_hover_news_img_video_tag_position_absolute_1_play_button">
                                         <span><i class="fa fa-play"></i></span>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div>
