--- a/Contact_us.html
+++ b/Contact_us.html
@@ -177,7 +177,8 @@
                 </form>
             </div>
             <div class="col-12 col-md-6 align-self-center">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3168.639290621062!2d-122.08624618469247!3d37.421999879825215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sbe!4v1514861541665" class="map_sss" allowfullscreen></iframe>
+                <!--map link below-->
+                <iframe src="" class="map_sss" allowfullscreen></iframe>
             </div>
         </div>
     </div>
