--- a/oops-in-programming.html
+++ b/oops-in-programming.html
@@ -301,7 +301,7 @@
                     </div>
                 </div>
                 <div class="row pb-3">
-                    <div class="col-5 align-self-center"><img src="images/seth-doyle-133175.jpg" alt="img"
+                    <div class="col-5 align-self-center"><img src="images/blog/Ransomware.png" alt="img"
                                                               class="fh5co_most_trading"/></div>
                     <div class="col-7 paddding">
                         <div class="most_fh5co_treding_font">Ransomware</div>
@@ -320,36 +320,37 @@
         <div class="owl-carousel owl-theme" id="slider2">
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/39-324x235.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/cpp/C++.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <a href="Understanding-Pointers-in-C++.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Jan 16,2023</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/joe-gardner-75333.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Machine-learning.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <a href="Linear-Regression-in-ML-AI.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Feb 18,2023</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/ryan-moreno-98837.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/cyberdocs/WiFiHacks/how-to-hack-wifi-aircrack-ng.png" alt=""/></div>
                     <div>
+                        <!--Update cyberDocs blog page-->
                         <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
-                        <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
+                        <div class="c_g"><i class="fa fa-clock-o"></i>Feb 21,2023</div>
                     </div>
                 </div>
             </div>
             <div class="item px-2">
                 <div class="fh5co_hover_news_img">
-                    <div class="fh5co_news_img"><img src="images/seth-doyle-133175.jpg" alt=""/></div>
+                    <div class="fh5co_news_img"><img src="images/programmingLanguages/python/Python.png" alt=""/></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
+                        <a href="method-python.html" class="d-block fh5co_small_post_heading"><span class="">The top 10 best computer speakers in the market</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i>Oct 16,2017</div>
                     </div>
                 </div>
